--- a/gustos.html
+++ b/gustos.html
@@ -25,13 +25,13 @@
     <h1>Gustos Personales</h1>
     <div class="prefs-grid">
       <div class="card">
-        <h4>Música</h4>
-        <p>Escuchar rock y electrónica</p>
+        <h4>Música y peliculas</h4>
+        <p>Escuchar rock y electronica ciencia ficcion y terror</p>
       </div>
 
       <div class="card">
         <h4>Deporte</h4>
-        <p>Ciclismo y gimnasio</p>
+        <p>Ciclismo y gym</p>
       </div>
 
       <div class="card">
